--- a/web/package.json
+++ b/web/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0"
   }
 }
