--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc --watch"
   },
   "author": "",
   "license": "ISC",
