--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Mako==1.3.2
 MarkupSafe==2.1.5
 mccabe==0.7.0
 platformdirs==4.2.0
+psycopg2==2.9.9
 pylint==3.1.0
 SQLAlchemy==2.0.28
 tomlkit==0.12.4
