Fix the project folders structure

--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -18,6 +18,9 @@ uri       = sqlite://storage.sqlite
 migrate   = true
 pool_size = 10  
 
+[postgres_connection]
+conn_string = postgres://postgres:123456@localhost/school
+
 ; smtp address and credentials
 [smtp]
 server = smtp.gmail.com:587
