--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "sweetalert2": "^11.10.6",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
