--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -12,14 +12,16 @@ toolbar     = false
 [host]
 names = localhost:*, 127.0.0.1:*, *:*, *
 
-; db configuration
-[db]
-uri       = sqlite://storage.sqlite
-migrate   = true
-pool_size = 10  
-
 [postgres_connection]
+host = localhost
+user = postgres
+password = 123456
+database = school
+
+[database]
 conn_string = postgres://postgres:123456@localhost/school
+migrate = False
+pool_size = 10  
 
 ; smtp address and credentials
 [smtp]
