--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -13,13 +13,14 @@ toolbar     = false
 names = localhost:*, 127.0.0.1:*, *:*, *
 
 [postgres_connection]
+engine = postgres
 host = localhost
 user = postgres
 password = 123456
 database = school
 
 [database]
-conn_string = postgres://postgres:123456@localhost/school
+conn_string = {engine}://{user}:{password}@{host}/{database}
 migrate = False
 pool_size = 10  
 
