--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -14,13 +14,13 @@ names = localhost:*, 127.0.0.1:*, *:*, *
 
 [postgres_connection]
 engine = postgres
-host = localhost
+host = postgres
 user = postgres
 password = 123456
 database = school
 
 [database]
-conn_string = {engine}://{user}:{password}@{host}/{database}
+conn_string = postgres://{user}:{password}@{host}/{database}
 migrate = False
 pool_size = 10  
 
